--- a/WZO_App/templates/WZO_App/settings.html
+++ b/WZO_App/templates/WZO_App/settings.html
@@ -55,5 +55,14 @@
         </div>
         {% endif %}
     </div>
+    <div class="mapcontrols">
+        <ul class="mapcontrol-ul">
+            <li class="mapcontrol-item">
+                <a class="mapcontrol-img" title="Service Health" href="/healthcheck">
+                    <i class="fas fa-heartbeat"></i>
+                </span>
+            </li>
+        </ul>
+    </div>
 </section>
 {% endblock maincontent %}
