--- a/WZO_App/templates/WZO_App/settings.html
+++ b/WZO_App/templates/WZO_App/settings.html
@@ -57,11 +57,13 @@
     </div>
     <div class="mapcontrols">
         <ul class="mapcontrol-ul">
-            <li class="mapcontrol-item">
-                <a class="mapcontrol-img" title="Service Health" href="/healthcheck">
-                    <i class="fas fa-heartbeat"></i>
-                </span>
-            </li>
+            <a href="/healthcheck">
+                <li class="mapcontrol-item no-border">
+                    <span class="mapcontrol-img" title="Service Health">
+                        <i class="fas fa-heartbeat"></i>
+                    </span>
+                </li>
+            </a>
         </ul>
     </div>
 </section>
