--- a/WZO_App/templates/WZO_App/healthcheck.html
+++ b/WZO_App/templates/WZO_App/healthcheck.html
@@ -2,16 +2,42 @@
 {% block maincontent %}
 <section class="calculate">
     <div class="card-container">
-        <div class="card" style="width: 18rem; margin-top: 2rem;">
-            <div class="card-body">
-                <h5 class="card-title">Google</h5>
-                {% if Google %}
-                <p class="card-text">Alles tutti.</p>
-                <span class="traffic-light green"></span><span class="traffic-light-des">Running</span>
-                {% else %}
-                <p class="card-text">Der Service ist aktuell nicht erreichbar. Bitte prüfen!</p>
-                <span class="traffic-light red"></span><span class="traffic-light-des">Not Running</span>
-                {% endif %}
+        <div class="row">
+            <div class="card" style="width: 18rem; margin-top: 2rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Google</h5>
+                    {% if Google %}
+                    <p class="card-text">Alles tutti.</p>
+                    <span class="traffic-light green"></span><span class="traffic-light-des">Running</span>
+                    {% else %}
+                    <p class="card-text">Der Service ist aktuell nicht erreichbar. Bitte prüfen!</p>
+                    <span class="traffic-light red"></span><span class="traffic-light-des">Not Running</span>
+                    {% endif %}
+                </div>
+            </div>
+            <div class="card" style="width: 18rem; margin-top: 2rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Celery</h5>
+                    {% if Google %}
+                    <p class="card-text">Alles tutti.</p>
+                    <span class="traffic-light green"></span><span class="traffic-light-des">Running</span>
+                    {% else %}
+                    <p class="card-text">Der Service ist aktuell nicht erreichbar. Bitte prüfen!</p>
+                    <span class="traffic-light red"></span><span class="traffic-light-des">Not Running</span>
+                    {% endif %}
+                </div>
+            </div>
+            <div class="card" style="width: 18rem; margin-top: 2rem;">
+                <div class="card-body">
+                    <h5 class="card-title">RabbitMQ</h5>
+                    {% if Google %}
+                    <p class="card-text">Alles tutti.</p>
+                    <span class="traffic-light green"></span><span class="traffic-light-des">Running</span>
+                    {% else %}
+                    <p class="card-text">Der Service ist aktuell nicht erreichbar. Bitte prüfen!</p>
+                    <span class="traffic-light red"></span><span class="traffic-light-des">Not Running</span>
+                    {% endif %}
+                </div>
             </div>
         </div>
     </div>
