--- a/WZO_App/templates/WZO_App/healthcheck.html
+++ b/WZO_App/templates/WZO_App/healthcheck.html
@@ -1,7 +1,7 @@
 {% extends 'WZO_App/base.html' %}
 {% block maincontent %}
 <section class="calculate">
-    <div class="card-container">
+    <div class="card-container padding-2rem">
         <div class="row">
             <div class="card" style="width: 18rem; margin-top: 2rem;">
                 <div class="card-body">
