--- a/WZO_App/templates/WZO_App/export.html
+++ b/WZO_App/templates/WZO_App/export.html
@@ -9,6 +9,13 @@
                 <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
+        <div class="card" style="width: 18rem; margin-top: 2rem;">
+            <div class="card-body">
+                <h5 class="card-title">Einsatzortdaten herunterladen</h5>
+                <p class="card-text">CSV Datei, die alle nicht gelöschten Einsatzorte enthält.</p>
+                <a href="/?download=eorte" class="btn btn-primary">Herunterladen</a>
+            </div>
+        </div>
     </div>
 </section>
 {% endblock maincontent %}
