--- a/WZO_App/templates/WZO_App/export.html
+++ b/WZO_App/templates/WZO_App/export.html
@@ -13,7 +13,14 @@
             <div class="card-body">
                 <h5 class="card-title">Einsatzortdaten herunterladen</h5>
                 <p class="card-text">CSV Datei, die alle nicht gelöschten Einsatzorte enthält.</p>
-                <a href="/?download=eorte" class="btn btn-primary">Herunterladen</a>
+                <a href="?download=eorte" class="btn btn-primary">Herunterladen</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-top: 2rem;">
+            <div class="card-body">
+                <h5 class="card-title">Werkstätten herunterladen</h5>
+                <p class="card-text">CSV Datei, die alle nicht gelöschten Werkstätten enthält.</p>
+                <a href="?download=werkstätten" class="btn btn-primary">Herunterladen</a>
             </div>
         </div>
     </div>
