--- a/WZO_App/static/css/main.css
+++ b/WZO_App/static/css/main.css
@@ -389,3 +389,21 @@ li.disabled{
 .padding-2rem{
     padding:2rem;
 }
+.import-blocker{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 999;
+    backdrop-filter: blur(5px);
+}
+.warning-stamp{
+    border: 5px solid red;
+    margin: auto;
+    font-size: 2rem;
+    font-weight: bold;
+    color: red;
+    padding: 10px;
+    border-radius: 10px;
+    transform: rotate(-15deg);
+}
