--- a/WZO_App/templates/WZO_App/import.html
+++ b/WZO_App/templates/WZO_App/import.html
@@ -5,6 +5,7 @@
             <div class="row">
                 {% if perms.WZO_App.add_zip_code %}
                 <div class="col">
+                    <div class="import-blocker"><span class="warning-stamp">Läuft bereits...</span></div>
                     <form class='import_form' method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="row">
@@ -34,6 +35,7 @@
                 {% endif %}
                 {% if perms.WZO_App.add_eort %}
                 <div class="col">
+                    <div class="import-blocker"><span class="warning-stamp">Läuft bereits...</span></div>
                     <form class='import_form' method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="row">
@@ -65,6 +67,7 @@
             <div class="row">
                 {% if perms.WZO_App.add_vehicle %}
                 <div class="col">
+                    <div class="import-blocker"><span class="warning-stamp">Läuft bereits...</span></div>
                     <form class='import_form' method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="row">
@@ -94,6 +97,7 @@
                 {% endif %}
                 {% if perms.WZO_App.add_workshop %}
                 <div class="col">
+                    <div class="import-blocker"><span class="warning-stamp">Läuft bereits...</span></div>
                     <form class='import_form' method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="row">
@@ -125,6 +129,7 @@
             <div class="row">
                 {% if perms.WZO_App.add_allocation %}
                 <div class="col">
+                    <div class="import-blocker"><span class="warning-stamp">Läuft bereits...</span></div>
                     <form class='import_form' method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="row">
